# libgeodecomp

./: .gitignore  README.md
lib/libflatarray/examples/gauss/: main.cpp
lib/libflatarray/include/libflatarray/testbed/: evaluate.hpp
src/examples/: CMakeLists.txt
src/examples/poisson/: .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  .poisson.hpp.swo  .poisson.hpp.swp  CMakeLists.txt  main.cpp  poisson.hpp
src/examples/xphase/: .main.cpp.swp  .test_csv.cpp.swp  .wang.hpp.swn  .wang.hpp.swo  .wang.hpp.swp  26particles.txt  CMakeLists.txt  Results.csv  allen_cahn.hpp  cahn_hilliard.hpp  main.cpp  test_csv.cpp_bak  test_csv.exe.stackdump  wang.hpp
src/libgeodecomp/communication/: boostserialization.h  hpxserialization.cpp  hpxserialization.h  typemaps.cpp  typemaps.h
src/libgeodecomp/geometry/: convexpolytope.h
src/libgeodecomp/io/: timestringconversion.h
src/libgeodecomp/misc/: tempfile.cpp
