lgd_generate_sourcelists("./")
set(RELATIVE_PATH "")
include(auto.cmake)
set(MPI_FLAGS "-DPMPI")
set(CMAKE_CXX_CFLAGS "${CMAKE_CXX_CFLAGS} ${MPI_FLAGS}")
if(WITH_MPI)
  add_executable(libgeodecomp_examples_xphase ${SOURCES})
  set_target_properties(libgeodecomp_examples_xphase PROPERTIES OUTPUT_NAME xphase)
  target_link_libraries(libgeodecomp_examples_xphase ${LOCAL_LIBGEODECOMP_LINK_LIB})
endif()
